# mindshard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  create_cer.sh  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  extractor.rs  lib.rs  loader.rs  main.rs  proxy.rs  semantic_store.rs  splitter.rs  web.rs
src/proxy/: ca.rs  http.rs  rewind.rs
tests/: integration_test.rs
